config/control/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent-control
spec:
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: mspsql
  ports:
  - {name: grpc, port: 9444, targetPort: grpc}
---
apiVersion: v1
kind: Service
metadata:
  name: registration
spec:
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: mspsql
  ports:
  - {name: http, port: 8082, targetPort: registration}
